--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@ Projects
 <link rel="stylesheet" href="{{ get_url(path='styles/ProjectsList.css') }}">
 {% endblock extra_styles %}
 
+{% block content %}
 <header>
   <nav>
     <div class="navLinkWrapper">
