--- a/templates/project.html
+++ b/templates/project.html
@@ -15,7 +15,7 @@
             <a href="{{  get_url(path='@/_index.md') }}">Other Projects</a>
          </div>
          <div class="navLinkWrapper">
-            <a href="https://portfolio.super-youtube.com">Portfolio</a>
+            <a href="https://portfolio.baetylboy.biz">Portfolio</a>
          </div>
       </nav>
    </header>
