--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ Projects
 <header>
   <nav>
     <div class="navLinkWrapper">
-      <a href="https://portfolio.super-youtube.com">Portfolio</a>
+      <a href="https://portfolio.baetylboy.biz">Portfolio</a>
     </div>
   </nav>
 </header>
